<resources>
    <string name="app_name">Горводоканал </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name1">DateTimePickerDialogsProject</string>
    <string name="time_edit_text_hint">здесь будет время..</string>
    <string name="date_edit_text_hint">здесь будет дата..</string>
    <string name="btn_date_text">Начало переода</string>
    <string name="btn_date_text2">Конец переода</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="kod_abon">Код абонента</string>
    <string name="kod">Код абонента</string>
    <string name="street">Введите улицу</string>
    <string name="house">Дом</string>
    <string name="flat">Квартира</string>
    <string name="fio">ФИО</string>
    <string name="passwordReg">Пароль</string>
    <string name="passwordConfirm">Подтверждение пароля</string>
    <string name="email">Email</string>
    <string name="phone">Телефон</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="preferenceScreen" translatable="false">preferenceScreen</string>
</resources>
