<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon3"
    >
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

       >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="55dp"
            android:background="@color/WhiteColor"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"


            app:backgroundTint="#FFFFFF"
            tools:ignore="VectorDrawableCompat" />
        <TextView
            android:id="@+id/headerRegistr"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:text="Регистрация"
            android:fontFamily="@font/roboto_medium"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="20dp"
            android:maxLines="1"
            />


        <EditText
            android:id="@+id/kod"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/headerRegistr"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="17dp"
            android:background="@drawable/dra4"
            android:textColorHint="#FFFFFF"
            android:gravity="center"
            android:inputType="phone"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:hint="@string/kod"
            android:maxLines="1"
            />
        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"

            android:layout_toRightOf="@+id/headerRegistr"


            android:layout_below="@+id/headerRegistr"
            app:srcCompat="@drawable/ic_baseline_contact_support_24"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="218dp"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/street"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/kod"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="17dp"
            android:inputType="text"
            android:background="@drawable/dra4"
            android:textColorHint="#fff"
            android:gravity="center"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:hint="@string/street"
            android:maxLines="1"
            />


        <EditText
            android:id="@+id/house"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/street"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="17dp"
            android:background="@drawable/dra4"
            android:textColorHint="#fff"
            android:gravity="center"
            android:ems="10"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:hint="@string/house"
            android:maxLines="1"
            />
        <EditText
            android:id="@+id/flat"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/house"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="17dp"
            android:background="@drawable/dra4"
            android:textColorHint="#fff"
            android:gravity="center"
            android:inputType="text"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:hint="@string/flat"
            />
        <ImageView
            android:id="@+id/imageFlat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"

            android:layout_toRightOf="@+id/headerRegistr"


            android:layout_below="@+id/house"
            app:srcCompat="@drawable/ic_baseline_contact_support_24"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="218dp"
            tools:ignore="VectorDrawableCompat" />
        <EditText
            android:id="@+id/fio"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/flat"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="17dp"
            android:background="@drawable/dra4"
            android:textColorHint="#fff"
            android:gravity="center"
            android:inputType="text"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:hint="@string/fio"
            />
        <EditText
            android:id="@+id/phone"
            android:inputType="phone"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/fio"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="17dp"
            android:background="@drawable/dra4"
            android:textColorHint="#fff"
            android:gravity="center"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:hint="@string/phone"
            />
        <EditText
            android:id="@+id/passwordReg"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/phone"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="17dp"
            android:background="@drawable/dra4"
            android:textColorHint="#fff"
            android:inputType="textPassword"

            android:gravity="center"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:hint="@string/passwordReg"
            />
        <ImageView
            android:id="@+id/imagePassword"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/headerRegistr"
            android:layout_marginRight="50dp"
            android:layout_below="@+id/phone"
            app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
            />

        <EditText
            android:id="@+id/ConfirmPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/passwordReg"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="17dp"
            android:background="@drawable/dra4"
            android:textColorHint="#fff"
            android:inputType="textPassword"
            android:gravity="center"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:hint="@string/passwordConfirm"
            />
        <ImageView
            android:id="@+id/imagePaswwordConfirm"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/headerRegistr"

            android:layout_below="@+id/passwordReg"
            app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
            />
        <EditText
            android:id="@+id/emailReg"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/ConfirmPassword"
            android:layout_marginTop="21dp"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:background="@drawable/dra4"
            android:layout_centerHorizontal="true"
            android:textSize="17dp"
            android:gravity="center"
            android:textColorHint="#fff"


            />





        <Button
            android:id="@+id/buttonReg"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_below="@+id/emailReg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/dra5"
            android:onClick="registrationSubmitData"
            android:text="Зарегистрироваться"
            android:textSize="14dp"
            />



    </RelativeLayout>

    </ScrollView>
</androidx.core.widget.NestedScrollView>
